PGCK-152 add connection type